parameterize jvm memory config