@@ -1,8 +1,13 @@
 -server
--Xms1g
--Xmx1g
--XX:MaxDirectMemorySize=1280m
+-Xmx{{ druid_broker_heap_size }}
+-Xms{{ druid_broker_heap_size }}
+-XX:NewSize={{ druid_broker_max_new_size }}
+-XX:MaxNewSize={{ druid_broker_max_new_size }}
+-XX:MaxDirectMemorySize={{ druid_broker_max_direct_size }}
+-XX:+UseConcMarkSweepGC
+-XX:+PrintGCDetails
+-XX:+PrintGCTimeStamps
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
--Djava.io.tmpdir=var/tmp
+-Djava.io.tmpdir=/mnt/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
